--- a/webdesign.html
+++ b/webdesign.html
@@ -69,8 +69,8 @@
     <section class="thtorial">
        <div class="alltutorial">
         <div class="container">
-        <div class="row  justify-content-between ">
-            <div class="col-lg-8 col-12 col-xl-9">
+        <div class="row  ">
+            <div class="col-lg-8 col-12 col-xl-8">
                 <div class="leftorial">
                     <ul class="d-flex list-unstyled align-items-center m-0 p-0  ">
                         <li tab="0" class="active"><h4>Overview<h4></li>
@@ -149,7 +149,53 @@
                         </div>
   </div> 
     <!-- Overview end -->
-
+<div class="tbover curbox">
+    <div class="accmenu">
+        <h5>Introduction <i class="fa-solid fa-angle-down"></i></h5>
+        <div class="menuInt">
+            <ul class="list-unstyled">
+<li class="before">
+    <a href=""><span>
+           <i class="bx bx-play-circle"></i> Course
+        Overview</span>
+        <div class="after">Preview</div></a>
+</li>
+<li>
+    <a href=""
+      ><span>
+        <i class="bx bx-play-circle"></i>Course Notes &
+        Resources</span
+      >
+      <div class="after">Preview</div></a
+    >
+  </li>
+  <li><a href="#">
+    <i class="fa-solid fa-play"></i>
+    <span>Course Notes & Resources</span>
+    <p>Preview</p>
+</a></li>
+<li><a href="#">
+    <i class="fa-solid fa-play"></i>
+    <span>5 Best Digital Marketing Tools</span>
+    <p>Preview</p>
+</a></li>
+<li><a href="#">
+    <i class="fa-solid fa-play"></i>
+    <span>Finish the Course in Half the Time</span>
+    <p>Preview</p>
+</a></li>
+<li><a href="#">
+    <i class="fa-solid fa-question"></i>
+    <span>Quiz-1</span>
+    <div class="d-flex align-items-center justify-content-between">
+        <p>2 questions</p>
+        <i class="fa-solid fa-lock lock"></i>
+    </div>
+</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
   <!-- instructor start-->
 
  <div class="tbover insbox"> 
@@ -350,8 +396,9 @@
 
 
             <!-- RIGHTSIDE -->
-            <div class="col-lg-4 col-12 col-xl-3">
+            <div class="col-lg-4 col-12 col-xl-4">
 
+              <div class="container">
                 <div class="rightorial">
                     <div class="clivideo">
                         <a href="https://www.youtube.com/watch?v=_X0eYtY8T_U"> <i class="fa-solid fa-play"></i></a>
@@ -391,6 +438,7 @@
                         <i class="fa-solid fa-share-nodes"></i> Share This Course
                     </button>
                 </div>
+              </div>
 
             </div>
         </div>
